# dnsproxy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  clean.sh  proxy.cfg
src/: dnsproxy.c  dnsproxy.h  settings.c  settings.h
